# codec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  makefile
include/codec/: binary.hpp  binary_codec.hpp  codec.hpp  json_codec.hpp
include/codec/old/: binary_codec.hpp
include/codec/old2/: codec.hpp  json_codec.hpp
src/: binary_codec_TEST.cpp  codec_test.cpp  json_codec_TEST.cpp  multiple_codec_TEST.cpp  playground_TEST.cpp  templates_TEST.cpp
